<resources>
    <!-- Main Activity -->
    <string name="app_name">IST Tickets</string>
    <string name="academic_office">Academic Office</string>
    <string name="mobility_international_office">Mobility &amp; International Office</string>
    <string name="taguspark_office">TagusPark Office</string>
    <string name="notissuing_warning">Not issuing tickets at the moment.</string>

    <!-- Schedules Dialogs -->
    <string name="schedules">Schedules</string>
    <string name="monday_friday">Monday–Friday:</string>
    <string name="wednesday">Wednesday:</string>
    <string name="tuesday_thursday">Tuesday &amp; Thursday:</string>
    <string name="weekend">Weekend:</string>
    <string name="schedule_mon_fri">09H30–16H30</string>
    <string name="schedule_wed">09H30–19H00</string>
    <string name="schedule_mio_mon_wed_fri">10H30–12H00</string>
    <string name="schedule_mio_tue_thur">10H30–12H00\n14H00–16H00</string>
    <string name="schedule_taguspark">09H30–16H00</string>
    <string name="closed">Closed</string>

    <!-- About Dialog -->
    <string name="about">About</string>
    <string name="ist_logo">ist_logo</string>
    <string name="meft_logo">meft_logo</string>
    <string name="by_creator">by João Bravo</string>
    <string name="contacts"><u>Contacts:</u></string>
    <string name="creator_email">joaofbravo@tecnico.ulisboa.pt</string>
    <string name="ao_phone">+351 218 417 222</string>
    <string name="ao_email">graduacao@tecnico.ulisboa.pt</string>
    <string name="mio_phone">+351 218 417 362</string>
    <string name="mio_email">nmci@tecnico.ulisboa.pt</string>
    <string name="tagus_phone">+351 210 407 076</string>
    <string name="tagus_email">academicatagus@tecnico.ulisboa.pt</string>

    <!-- Queue names -->
    <string name="general_service">General Service</string>
    <string name="priority_attendance">Priority Attendance</string>
    <string name="documents">Documents</string>
    <string name="outside_europe_athens">Outside Europe | Athens</string>
    <string name="europe_erasmus_is_link">Europe | Erasmus | IS:LINK</string>
    <string name="icm_innoenergy_vulcanus">ICM | InnoEnergy | Vulcanus</string>
    <string name="iaeste">IAESTE</string>
    <string name="other_issues">Other Issues (VISA, etc)</string>
    <string name="general_attendance">General Attendance</string>

    <!-- Service Activities -->
    <string name="current_ticket">Current Ticket:</string>
    <string name="desk_no">Desk no:</string>
    <string name="people_in_line">People in Line:</string>
    <string name="avg_waiting_time">Average Wait Time:</string>
    <string name="min">min</string>
    <string name="attention_3tt">Attention: 3 ticket tolerance</string>
    <string name="schedule">Schedule</string>

    <!-- API Endpoints -->
    <string name="url_base">https://fenix.tecnico.ulisboa.pt/api/ticketing/services/</string>
    <string name="url_end_ao">1/queues/</string>
    <string name="url_end_mio">2/queues/</string>
    <string name="url_end_tagus">4/queues/</string>
</resources>
