<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.joaobravo.firstapp.MainActivity">

    <item
        android:id="@+id/item_outsideeu_athens"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="1"
        android:title="@string/outside_europe_athens"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_eu_erasmus_islink"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="2"
        android:title="@string/europe_erasmus_is_link"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_icm_inno_vulcanus"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="3"
        android:title="@string/icm_innoenergy_vulcanus"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_iaeste"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="3"
        android:title="@string/iaeste"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_other_issues"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="3"
        android:title="@string/other_issues"
        android:visible="true"
        app:showAsAction="never" />
</menu>
