<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.joaobravo.firstapp.MainActivity">

    <item
        android:id="@+id/item_general_service"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="1"
        android:title="@string/general_service"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_priority_attendance"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="2"
        android:title="@string/priority_attendance"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_documents"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="3"
        android:title="@string/documents"
        android:visible="true"
        app:showAsAction="never" />
</menu>
