<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_mon_fri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/monday_friday"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/text_weekend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/text_weekend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/weekend"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_mon_fri" />

    <TextView
        android:id="@+id/text_mon_fri_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/schedule_taguspark"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_mon_fri"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_closed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/closed"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_weekend"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>